--- a/paginas/categorias.html
+++ b/paginas/categorias.html
@@ -22,13 +22,13 @@
     </nav>
     <header>
         <img id="logo" src="../img/ciclismo.webp" alt="bici">
-        <h1 id="nombre">Rutan de ciclismo</h1>
+        <h1 id="nombre">rutas pa ir a rodar</h1>
     </header>
     
 
     <main>
         <article class="segmento">
-            <h1>alto del vino </h1>
+            <h1 id="alto_del_vino">alto del vino </h1>
             <div class="info_segmento">
                 <!--ficha alto del vino-->
                 <div class="card">
@@ -37,8 +37,8 @@
                         <h3>titulo</h3>
                     </div>
                     <div class="face back">
-                        <h3>titulo2</h3>
-                        <p>hola mundo </p>
+                        <h3>conoce mi conocimiento y mi experiencia</h3>
+                        <p>dale click y veras los datos mas importantes de la ruta</p>
                         <div class="link">
                             <a href="../pagina_categorias/alto_del_vino.html">conoce mas</a>
                         </div>
@@ -46,7 +46,7 @@
                 </div>
                 <!--resumen alto del vino -->
                 <div class="texto_segmento">
-                    <h2>resumen</h2>
+                    <h2 >resumen</h2>
                     <p>una ruta añeja para principiantes
                         Más que lo empinado de sus pendientes, lo difícil radica en la extensión del trayecto:
                         son
@@ -61,8 +61,8 @@
 
 
         <article class="segmento">
-            <h1>alto de la arepa</h1>
-            <div>
+            <h1 id="alto_de_arepa">alto de la arepa</h1>
+            <div class="info_segmento">
                 <!--ficha alto de la arepa-->
                 <div class="card">
                     <div class="face front">
@@ -70,22 +70,24 @@
                         <h3>titulo</h3>
                     </div>
                     <div class="face back">
-                        <h3>titulo2</h3>
-                        <p>hola mundo </p>
+                        <h3>conoce mi conocimiento y mi experiencia</h3>
+                        <p>dale click y veras los datos mas importantes de la ruta</p>
                         <div class="link">
                             <a href="../pagina_categorias/alto_de_arepa.html">conoce mi experiencia</a>
                         </div>
                     </div>
                 </div>
                 <!--resumen alto de la arepa-->
+                <div class="texto_segmento">
 
-                <h2>resumen</h2>
-                <p>Esta ruta es una de subidas más populares para los ciclistas Bogotanos, se puede realizar
-                    tanto en bicicleta de ruta, de montaña, gravel, enduro entre otras, es un recorrido de
-                    aproximadamente 48 km desde las 100 con autopista hasta el Alto de la Arepas, ida y
-                    vuelta.
-                </p>
-                <a href="../pagina_categorias/alto_del_vino.html">conoce mi experiencia</a>
+                    <h2>resumen</h2>
+                    <p>Esta ruta es una de subidas más populares para los ciclistas Bogotanos, se puede realizar
+                        tanto en bicicleta de ruta, de montaña, gravel, enduro entre otras, es un recorrido de
+                        aproximadamente 48 km desde las 100 con autopista hasta el Alto de la Arepas, ida y
+                        vuelta.
+                    </p>
+                    <a href="../pagina_categorias/alto_del_vino.html">conoce mi experiencia</a>
+                </div>
             </div>
 
         </article>
@@ -96,8 +98,8 @@
 
 
         <article class="segmento ">
-            <h1>alto de patios </h1>
-            <div>
+            <h1 id="alto_de_patios">alto de patios </h1>
+            <div class="info_segmento">
                 <!--ficha alto de patios-->
                 <div class="card">
                     <div class="face front">
@@ -105,28 +107,31 @@
                         <h3>titulo</h3>
                     </div>
                     <div class="face back">
-                        <h3>titulo2</h3>
-                        <p>hola mundo </p>
+                        <h3>conoce mi conocimiento y mi experiencia</h3>
+                        <p>dale click y veras los datos mas importantes de la ruta</p>
                         <div class="link">
                             <a href="../pagina_categorias/alto_de_patios.html">conoce mas</a>
                         </div>
                     </div>
                 </div>
                 <!--resumen alto de patios-->
-                <h2>resumen </h2>
-                <p>La subida en bicicleta a Patios La Calera es una ruta muy popular entre los ciclistas en
-                    Bogotá, Colombia. Esta ruta ofrece un desafío emocionante y hermosas vistas panorámicas de
-                    la región. </p>
+                <div class="texto_segmento">
 
-                <a href="../pagina_categorias/alto_de_patios.html">conoce mi experiencia</a>
-            </div>
+                    <h2>resumen </h2>
+                    <p>La subida en bicicleta a Patios La Calera es una ruta muy popular entre los ciclistas en
+                        Bogotá, Colombia. Esta ruta ofrece un desafío emocionante y hermosas vistas panorámicas de
+                        la región. </p>
+    
+                    <a href="../pagina_categorias/alto_de_patios.html">conoce mi experiencia</a>
+                </div>
+                </div>
         </article>
 
 
 
         <article class="segmento">
-            <h1>la cuchilla</h1>
-            <div>
+            <h1 id="la_cuchilla">la cuchilla</h1>
+            <div class="info_segmento">
                 <!--ficha la cuchilla-->
                 <div class="card">
                     <div class="face front">
@@ -134,8 +139,8 @@
                         <h3>titulo</h3>
                     </div>
                     <div class="face back">
-                        <h3>titulo2</h3>
-                        <p>hola mundo </p>
+                        <h3>conoce mi conocimiento y mi experiencia</h3>
+                        <p>dale click y veras los datos mas importantes de la ruta</p>
                         <div class="link">
                             <a href="#"></a>
                         </div>
@@ -143,20 +148,23 @@
                 </div>
 
                 <!--resumen la cuchilla-->
-                <h2>resumen</h2>
-                <p>BEl alto de la Cuchilla se ha convertido en uno de los más apetecidos por los ciclistas de
-                    Bogotá y Cundinamarca y mucho de ese interés que ha despertado es motivado por su dureza, al
-                    increíble paisaje, al poco tráfico vehicular de su recorrido y a la visibilidad que ha
-                    tenido gracias a un par de competencias que se han realizado en este ascenso</p>
-                <a href="../pagina_categorias/la_cuchilla.html">conoce mi experiencia </a>
-            </div>
+                <div class="texto_segmento">
+
+                    <h2>resumen</h2>
+                    <p>BEl alto de la Cuchilla se ha convertido en uno de los más apetecidos por los ciclistas de
+                        Bogotá y Cundinamarca y mucho de ese interés que ha despertado es motivado por su dureza, al
+                        increíble paisaje, al poco tráfico vehicular de su recorrido y a la visibilidad que ha
+                        tenido gracias a un par de competencias que se han realizado en este ascenso</p>
+                    <a href="../pagina_categorias/la_cuchilla.html">conoce mi experiencia </a>
+                </div>
+                </div>
         </article>
 
 
 
         <article class="segmento" >
-            <h1>represa de sisga</h1>
-            <div>
+            <h1 id="represa_sisga">represa de sisga</h1>
+            <div class="info_segmento">
                 <!--ficha represa de sisga-->
                 <div class="card">
                     <div class="face front">
@@ -164,28 +172,31 @@
                         <h3>titulo</h3>
                     </div>
                     <div class="face back">
-                        <h3>titulo2</h3>
-                        <p>hola mundo </p>
+                        <h3>conoce mi conocimiento y mi experiencia</h3>
+                        <p>dale click y veras los datos mas importantes de la ruta</p>
                         <div class="link">
                             <a href="../pagina_categorias/represa_sisga.html">conoce mas </a>
                         </div>
                     </div>
                 </div>
                 <!--resumen represa de sisga-->
-                <h2>resumen</h2>
-                <p>Esta represa, ubicada en la cuenca alta del río Bogotá, a la altura de los municipios de
-                    Chocontá, Sesquilé, Guatavita y Machetá, se caracteriza por tener en sus alrededores y
-                    dentro de sus aguas, una gran diversidad de flora y fauna que la convierten en una de las
-                    maravillas naturales del centro del país</p>
-                <a href="../pagina_categorias/represa_sisga.html">conoce mi experiencia </a>
-            </div>
+                <div class="texto_segmento">
+
+                    <h2>resumen</h2>
+                    <p>Esta represa, ubicada en la cuenca alta del río Bogotá, a la altura de los municipios de
+                        Chocontá, Sesquilé, Guatavita y Machetá, se caracteriza por tener en sus alrededores y
+                        dentro de sus aguas, una gran diversidad de flora y fauna que la convierten en una de las
+                        maravillas naturales del centro del país</p>
+                    <a href="../pagina_categorias/represa_sisga.html">conoce mi experiencia </a>
+                </div>
+                </div>
         </article>
 
 
 
         <article class="segmento">
             <h1>vuelta a la sabana</h1>
-            <div>
+            <div class="info_segmento">
                 <!--ficha alto del vino-->
                 <div class="card">
                     <div class="face front">
@@ -193,21 +204,24 @@
                         <h3>titulo</h3>
                     </div>
                     <div class="face back">
-                        <h3>titulo2</h3>
-                        <p>hola mundo </p>
+                        <h3>conoce mi conocimiento y mi experiencia</h3>
+                        <p>dale click y veras los datos mas importantes de la ruta</p>
                         <div class="link">
                             <a href="#"></a>
                         </div>
                     </div>
                 </div>
+<!--resumen vuelta a la sabana-->
+<div class="texto_segmento">
 
-                <h2>resumen</h2>
-                <p>La vuelta a la sabana recargada es una ruta genial y sumando sus puertos adicionales te dan
-                    aproximadamente 110 km de aventuras sobre tu amada bicicleta y un desnivel de aproximados
-                    1800 metros de ascenso positivo. Esta ruta es muy segura pero si puedes llevar
-                    acompañamiento es mucho mejor.</p>
-                <a href="../pagina_experiencia/vuelta_sabana.html">conoce mi experiencia </a>
-            </div>
+    <h2>resumen</h2>
+    <p>La vuelta a la sabana recargada es una ruta genial y sumando sus puertos adicionales te dan
+        aproximadamente 110 km de aventuras sobre tu amada bicicleta y un desnivel de aproximados
+        1800 metros de ascenso positivo. Esta ruta es muy segura pero si puedes llevar
+        acompañamiento es mucho mejor.</p>
+    <a href="../pagina_experiencia/vuelta_sabana.html">conoce mi experiencia </a>
+</div>
+</div>
         </article>
 
 
@@ -224,4 +238,3 @@
 
 </html>
 
-<!--TARJETA-->
