--- a/paginas/index.html
+++ b/paginas/index.html
@@ -21,15 +21,15 @@
 
 
         <img id="logo" src="../img/ciclismo.webp" alt="bici">
-        <h1 id="nombre">Rutan de ciclismo</h1>
+        <h1 id="nombre">Rutas de ciclismo</h1>
     </header>
 
     <main>
 
         <section id="contenido_principal">
-            <h1></h1>
-            <p id="parrafo1">
-            </p> Documento creado para ciclistas de bogota donde podran ver varias de las rutas de ciclismo para
+            <h1>Mi pagina</h1>
+            <p>
+            Documento creado para ciclistas de bogota donde podran ver varias de las rutas de ciclismo para
             que puedas escoger cual quieres recorrer, donde veras varias reseñas y experiencias de la ruta que
             escojas, aparte de poder ver las rutas y el recorrido desde la ciudad de bogota
             </p>
@@ -46,13 +46,14 @@
                     <h3>alto del vino</h3>
                 </div>
                 <div class="face back">
-                    <h3>titulo2</h3>
-                    <p>hola mundo </p>
+                    <h3>conoce mi ruta</h3>
+                    <p>conoceras las rutas junto con su recorrido su altitud y su dificultad de cada ruta  </p>
                     <div class="link">
-                        <a href="categorias.html">conoce mas</a>
+                        <a href="categorias.html#alto_del_vino">mira el contenido </a>
                     </div>
                 </div>
             </div>
+
 
             <div class="card">
                 <div class="face front">
@@ -60,10 +61,10 @@
                     <h3>alto de la arepa </h3>
                 </div>
                 <div class="face back">
-                    <h3>titulo2</h3>
-                    <p>hola mundo </p>
+                    <h3>conoce mi ruta</h3>
+                    <p>conoceras las rutas junto con su recorrido su altitud y su dificultad de cada ruta  </p>
                     <div class="link">
-                        <a href="../pagina_categorias/alto_de_arepa.html">conoce mi experiencia</a>
+                        <a href="categorias.html#alto_de_arepa">mira el contenido </a>
                     </div>
                 </div>
             </div>
@@ -74,10 +75,10 @@
                     <h3>alto de patios</h3>
                 </div>
                 <div class="face back">
-                    <h3>titulo2</h3>
-                    <p>hola mundo </p>
+                    <h3>conoce mi ruta</h3>
+                    <p>conoceras las rutas junto con su recorrido su altitud y su dificultad de cada ruta  </p>
                     <div class="link">
-                        <a href="../pagina_categorias/alto_de_patios.html">conoce mas</a>
+                        <a href="categorias.html#alto_de_patios">mira el contenido </a>
                     </div>
                 </div>
             </div>
@@ -89,10 +90,10 @@
                     <h3>alto de la cuchilla</h3>
                 </div>
                 <div class="face back">
-                    <h3>titulo2</h3>
-                    <p>hola mundo </p>
+                    <h3>conoce mi ruta</h3>
+                    <p>conoceras las rutas junto con su recorrido su altitud y su dificultad de cada ruta  </p>
                     <div class="link">
-                        <a href="#"></a>
+                        <a href="categorias.html#la_cuchilla">mira el contenido</a>
                     </div>
                 </div>
             </div>
@@ -103,10 +104,10 @@
                     <h3>represa sisga</h3>
                 </div>
                 <div class="face back">
-                    <h3>titulo2</h3>
-                    <p>hola mundo </p>
+                    <h3>conoce mi ruta</h3>
+                    <p>conoceras las rutas junto con su recorrido su altitud y su dificultad de cada ruta  </p>
                     <div class="link">
-                        <a href="categorias.html#represa_sisga">conoce mas </a>
+                        <a href="categorias.html#represa_sisga">mira el contenido</a>
                     </div>
                 </div>
             </div>
