clasificacion de categorias y experiencia

--- a/pagina_categorias/alto_del_vino.html
+++ b/pagina_categorias/alto_del_vino.html
@@ -17,6 +17,7 @@
                 <li class="niveles"><a href="contactanos.html">contactanos</a> </li>
             </ul>
         </nav>
+        <p> aqui va la informacion del alto del vino </p>
     </header>
    <p> aqui va la informacion</p>
     </body>
