--- a/pagina_categorias/la_cuchilla.html
+++ b/pagina_categorias/la_cuchilla.html
@@ -16,5 +16,6 @@
                 <li class="niveles"><a href="categorias.html">categorias</a> </li>
                 <li class="niveles"><a href="contactanos.html">contactanos</a> </li>
             </ul>
+            aqui va la informacion del alto de la cuchilla
         </nav>
     </header>
