--- a/pagina_categorias/alto_de_patios.html
+++ b/pagina_categorias/alto_de_patios.html
@@ -16,5 +16,6 @@
                 <li class="niveles"><a href="categorias.html">categorias</a> </li>
                 <li class="niveles"><a href="contactanos.html">contactanos</a> </li>
             </ul>
+            aqui va la info del alto de patios 
         </nav>
     </header>
