--- a/paginas/contactanos.html
+++ b/paginas/contactanos.html
@@ -10,15 +10,15 @@
 </head>
 <body>
    <header>
-    <img id="logo" src="../img/logogpzone.png" alt="bici">
+       <nav>
+           <ul class="etiquetas"> 
+               <li class="niveles"><a href="index.html">inicio</a> </li>
+               <li class="niveles"><a href="categorias.html">categorias</a> </li>
+               <li class="niveles"><a href="contactanos.html">contactanos</a> </li>
+           </ul>
+       </nav>
+    <img id="logo" src="../img/ciclismo.webp" alt="bici">
     <h1 id="nombre">bicicletas</h1>
-    <nav>
-        <ul class="etiquetas"> 
-            <li class="niveles"><a href="index.html">inicio</a> </li>
-            <li class="niveles"><a href="categorias.html">categorias</a> </li>
-            <li class="niveles"><a href="contactanos.html">contactanos</a> </li>
-        </ul>
-    </nav>
    </header>
        
 
